--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -28,7 +28,7 @@
         <h1>Dashboard - Welcome,</h1>
         <button
           class="bg-text text-white px-6 py-2 rounded-lg"
-          onclick="window.location.href='/templates/home.html'"
+          onclick="window.location.href=`{{url_for('home')}}`"
         >
           Logout
         </button>
