--- a/templates/home.html
+++ b/templates/home.html
@@ -36,12 +36,12 @@
       <div class="nav flex gap-8 my-10">
         <a
           class="bg-purp text-white px-8 py-2 rounded-full"
-          href="/templates/login.html"
+          href="{{url_for('login')}}"
           >Login</a
         >
         <a
           class="bg-text text-white px-8 py-2 rounded-full"
-          href="/templates/register.html"
+          href="{{url_for('register')}}"
           >Register</a
         >
       </div>
