--- a/templates/home.html
+++ b/templates/home.html
@@ -34,15 +34,15 @@
         platform.
       </p>
       <div class="nav flex gap-8 my-10">
-        <a
+        <button
           class="bg-purp text-white px-8 py-2 rounded-full"
-          href="{{url_for('login')}}"
-          >Login</a
+         onclick="window.location.href='/templates/login.html'"
+          >Login</button
         >
-        <a
+        <button
           class="bg-text text-white px-8 py-2 rounded-full"
-          href="{{url_for('register')}}"
-          >Register</a
+         onclick="window.location.href='/templates/register.html'"
+          >Register</button
         >
       </div>
       <img
