--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Parkinsans:wght@300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./static/css/style.css" />
   </head>
   <style type="text/tailwindcss">
     @theme {
@@ -68,8 +68,9 @@
 
     <!-- Results -->
 
-    <script>
+    <script type="module">
       // Flask server URL - change this if your Flask server runs on a different port
+      import { marked } from "https://cdn.jsdelivr.net/npm/marked/lib/marked.esm.js";
       const API_BASE_URL = "http://127.0.0.1:5000";
 
       document
@@ -106,7 +107,7 @@
 
             if (data.status === "true") {
               messageDiv.textContent = "Scan completed successfully!";
-              resultsDiv.innerHTML = `<h3>Scan Results</h3>
+              resultsDiv.innerHTML = `marked.parse(<h3>Scan Results</h3>
                         <p><strong>Target:</strong> ${data.target}</p>
                         <p><strong>IP:</strong> ${data.ip}</p>
                         <p><strong>Subdomains Found:</strong> ${
@@ -121,7 +122,7 @@
                         <p><strong>Total Vulnerabilities:</strong> ${
                           data.total_vulnerabilities
                         }</p>
-                        <pre>${JSON.stringify(data, null, 2)}</pre>`;
+                        <pre>${JSON.stringify(data, null, 2)}</pre>)`;
             } else {
               messageDiv.textContent = "Error: " + data.message;
             }
