--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Parkinsans:wght@300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./static/css/style.css" />
   </head>
   <style type="text/tailwindcss">
     @theme {
@@ -53,7 +53,7 @@
           </button>
         </form>
         <p>
-          Don't have an account? <button class="text-sm text-purp" onclick="window.location.href='/templates/register.html'">
+          Don't have an account? <button class="text-sm text-purp" onclick="window.location.href='/templates/register'">
             Register</button
           >
         </p>
@@ -73,7 +73,7 @@
           const messageDiv = document.getElementById("message");
 
           try {
-            const response = await fetch(`${API_BASE_URL}/login`, {
+            const response = await fetch(`${API_BASE_URL}/templates/login`, {
               method: "POST",
               headers: { "Content-Type": "application/json" },
               credentials: "include",
@@ -97,7 +97,7 @@
               messageDiv.className = "message success";
               messageDiv.textContent = data.message;
               setTimeout(
-                () => (window.location.href = '/templates/dashboard.html'),
+                () => (window.location.href = '/templates/dashboard'),
                 1000
               );
             } else {
